--- a/HlsWinForm/wwwroot/index.html
+++ b/HlsWinForm/wwwroot/index.html
@@ -11,7 +11,10 @@
 
 <body>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
-
+<center>
+    <h1>Hls.js demo - with static files</h1>
+    <video height="600" id="staticvideo" controls></video>
+</center>
 <div id="app">Loading...</div>
 
 <div id="blazor-error-ui">
@@ -21,6 +24,29 @@
 </div>
 
 <script src="_framework/blazor.webview.js"></script>
+<script>
+    var video = document.getElementById('staticvideo');
+    if (Hls.isSupported()) {
+        var hls = new Hls({
+            debug: true,
+        });
+        hls.loadSource('http://192.168.0.54:8080/video/out.m3u8');
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MEDIA_ATTACHED, function () {
+            video.muted = true;
+            video.play();
+        });
+    }
+        // hls.js is not supported on platforms that do not have Media Source Extensions (MSE) enabled.
+        // When the browser has built-in HLS support (check using `canPlayType`), we can provide an HLS manifest (i.e. .m3u8 URL) directly to the video element through the `src` property.
+    // This is using the built-in support of the plain video element, without using hls.js.
+    else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+        video.src = 'http://192.168.0.54:8080/video/out.m3u8';
+        video.addEventListener('canplay', function () {
+            video.play();
+        });
+    }
+</script>
 <script>
     function playVideo(source) {
         var video = document.getElementById('video');
