--- a/HlsWinForm/wwwroot/index.html
+++ b/HlsWinForm/wwwroot/index.html
@@ -30,22 +30,14 @@
         var hls = new Hls({
             debug: true,
         });
-        hls.loadSource('http://localhost:8080/video/out.m3u8');
+        hls.loadSource('http://192.168.0.54:8080/video/out.m3u8');
         hls.attachMedia(video);
         hls.on(Hls.Events.MEDIA_ATTACHED, function () {
             video.muted = true;
             video.play();
         });
     }
-        // hls.js is not supported on platforms that do not have Media Source Extensions (MSE) enabled.
-        // When the browser has built-in HLS support (check using `canPlayType`), we can provide an HLS manifest (i.e. .m3u8 URL) directly to the video element through the `src` property.
-    // This is using the built-in support of the plain video element, without using hls.js.
-    else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = 'http://192.168.0.54:8080/video/out.m3u8';
-        video.addEventListener('canplay', function () {
-            video.play();
-        });
-    }
+  
 </script>
 <script>
     function playVideo(source) {
